crates/ferrum-interfaces/tests/ui/vnext/fail/resource_failure_receipt_is_not_deserialize.rs
use ferrum_interfaces::vnext::ResourceFailureReceipt;

fn main() {
    let _: ResourceFailureReceipt = serde_json::from_str("{}").unwrap();
}
